smb: map ECONNABORTED to ERR_CONNECTION_BROKEN

Summary:
seems the most reasonable candidate given the pretty strings in
KIO::buildErrorString and the detailed causes in the detail function.

this does not really improve the error message, but should dolphin
ever learn to pick up details from detailedErrorStrings it would make
diagnosing easier.

ECONNABORTED can mean any number of things, so I guess a signle line
error will always be incredibly vague.

BUG: 415436
FIXED-IN: 19.12.3

Test Plan: hoping for the best!

Reviewers: ngraham

Reviewed By: ngraham

Subscribers: kde-frameworks-devel, kfm-devel

Tags: #dolphin, #frameworks

Differential Revision: https://phabricator.kde.org/D27377